--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,21 +1,9 @@
-<div class="main-page">
-    <h1>
-      Welcome to myFlix!
-    </h1>
-    <button
-      mat-raised-button
-      (click)="openUserRegistrationDialog()"
-      style="margin-right: 10px;"
-      color="primary"
-    >
-      Sign Up
-    </button>
-    <button
-      mat-raised-button
-      color="primary"
-      (click)="openUserLoginDialog()"
-      style="margin-right: 10px;"
-    >
-      Login
-    </button>
+<h1 class="center-text">Welcome to myFlix!</h1>
+<h3 class="center-text detailed">Please login to continue.</h3>
+<div class="button">
+  <button mat-raised-button color="primary" (click)="openUserLoginDialog()">Log In</button>
+</div>
+<h3 class="center-text detailed" style="margin-top: 50px">If you're a new user, please register.</h3>
+<div class="button">
+  <button mat-raised-button color="primary" (click)="openUserRegistrationDialog()">Sign Up</button>
 </div>
