added director view, genre view, synopsis view, and typedoc

--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div style="display: flex;">
+<div class="scrollable-element" style="display: flex;">
     <mat-card *ngFor="let movie of movies;" style="flex: 1 1 auto;">
         <mat-card-header>
         <mat-card-title>{{movie.Title}}</mat-card-title>
@@ -10,22 +10,29 @@
             <button
                 mat-button
                 color="primary"
+                (click)="openGenreDialog(movie.Genre.Name, movie.Genre.Description)"
             >
                 Genre
             </button>
             <button
                 mat-button
                 color="primary"
+                (click)="openDirectorDialog(movie.Director.Name, movie.Director.Bio, movie.Director.Birth, movie.Director.Death)"
             >
                 Director
             </button>
             <button
                 mat-button
                 color="primary"
+                (click)="openMovieDetailsDialog(movie.Title, movie.Description)"
             >
                 Synopsis
             </button>
-            <mat-icon>favorite_border</mat-icon>
+          <button
+            mat-icon-button
+            (click)="FavouriteMovie(movie._id)">
+            <mat-icon>{{ favourites.includes(movie._id) ? 'favorite' : 'favorite_border' }} </mat-icon>
+          </button>
         </mat-card-actions>
     </mat-card>
 </div>
