--- a/src/app/profile-overview/profile-overview.component.html
+++ b/src/app/profile-overview/profile-overview.component.html
@@ -20,3 +20,11 @@
     </div>
   </div>
 </form>
+
+<!--<mat-card *ngFor="let favourite of favourites">-->
+<!--  <mat-card-header>-->
+<!--    <mat-card-title>{{ favourite.Title }}</mat-card-title>-->
+<!--    <mat-card-subtitle>Directed by: {{ favourite.Director.Name }}</mat-card-subtitle>-->
+<!--  </mat-card-header>-->
+<!--  <img src= {{ favourite.ImagePath }} alt= {{ favourite.Title }} />-->
+<!--</mat-card>-->
