--- a/src/app/user-login-form/user-login-form.component.html
+++ b/src/app/user-login-form/user-login-form.component.html
@@ -1,18 +1,18 @@
-<mat-card class="card">
-    <mat-card-header>
-      <mat-card-title>Login</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <form>
-        <mat-form-field class="formField">
-          <input matInput [(ngModel)]="userData.Username" placeholder="Username" type="text" name="Username" required>
-        </mat-form-field>
-        <mat-form-field class="formField">
-          <input matInput [(ngModel)]="userData.Password" placeholder="Password" type="password" name="Password" required>
-        </mat-form-field>
-      </form>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button (click)="loginUser()" color="primary">Login</button>
-    </mat-card-actions>
-  </mat-card>
+<mat-card class="dialog">
+  <mat-card-header class="header">
+    <mat-card-title class="title">Login</mat-card-title>
+  </mat-card-header>
+  <mat-card-content class="content">
+    <form>
+      <mat-form-field class="formField">
+        <input matInput [(ngModel)]="userData.Username" placeholder="Username" type="text" name="Username" required>
+      </mat-form-field>
+      <mat-form-field class="formField">
+        <input matInput [(ngModel)]="userData.Password" placeholder="Password" type="password" name="Password" required>
+      </mat-form-field>
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button (click)="loginUser()" color="primary">Login</button>
+  </mat-card-actions>
+</mat-card>
